--- a/my project/style.css
+++ b/my project/style.css
@@ -1,3 +1,4 @@
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&family=Montserrat:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat+Subrayada&family=Montserrat:wght@500&family=Raleway:wght@500&display=swap');
@@ -13,7 +14,7 @@ html {
 }
 
 body {
-    background-color: #f8f9fa;
+    background-color: #dcdde1;
     padding: 1.5rem;
 }
 
@@ -43,6 +44,9 @@ header {
     color: white;
     backface-visibility: hidden;
     margin-bottom: 6rem;
+    text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+             0px 8px 13px rgba(0,0,0,0.1),
+             0px 18px 23px rgba(0,0,0,0.1);
 }
 
 .primary-heading-main {
@@ -149,14 +153,31 @@ header {
     }
 }
 
-.main-intro {
+@keyframes bounce {
+	20%, 50%, 80%, to {
+        opacity: 0;
+		transform: translateY(0);
+	}
+	40% {
+		transform: translateY(-10rem);
+	}
+	70% {
+		transform: translateY(-2rem);
+	}
+	90% {
+        transform: translateY(0);
+        opacity: 1;
+	}
+}
+
+#main-intro {
     height: 100vh;
     margin-top: 2rem;
     background: #1e3c72;  
     background: linear-gradient(to bottom right, #030a35, #3438f5); 
     padding: 3rem;
     clip-path: polygon(50% 0%, 100% 10%, 100% 85%, 50% 100%, 0 85%, 0 10%);
-    padding-bottom: 25px;
+    padding-bottom: 2.5rem;
 }
 
 #heading-text {
@@ -166,6 +187,10 @@ header {
     font-weight: 400;
     margin: 2.5rem 2rem;
     color: #acff3e;
+    animation: bounce 1.2s linear;
+    text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+             0px 8px 13px rgba(0,0,0,0.1),
+             0px 18px 23px rgba(0,0,0,0.1);
 }
 
 .section-text {
@@ -179,6 +204,10 @@ header {
     margin: 7rem 10%;
     color: #ffeaa7;
     word-wrap: normal;
+    animation: bounce 1.2s linear;
+    text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+             0px 8px 13px rgba(0,0,0,0.1),
+             0px 18px 23px rgba(0,0,0,0.1);
 }
 
 .text-content span {
@@ -189,5 +218,16 @@ header {
     font-weight: 600;
     font-family: 'Raleway', sans-serif;;
     color: #eb2f06;
-    display: inline;
+    display: inline;   
 }
+
+#project-intro {
+    height: 100vh;
+    margin-top: 2rem;
+    background: #1e3c72;  
+    background: linear-gradient(to bottom right, #030a35, #3438f5); 
+    padding: 3rem;
+    clip-path: polygon(50% 0%, 100% 10%, 100% 85%, 50% 100%, 0 85%, 0 10%);
+    padding-bottom: 2.5rem;
+}
+
