--- a/my project/style.css
+++ b/my project/style.css
@@ -14,7 +14,7 @@ html {
 }
 
 body {
-    background-color: #bdc3c7;
+    background-color: #8395a7;
     padding: 1.5rem;
 }
 
@@ -61,6 +61,7 @@ header {
     font-size: 20px;
     font-weight: 700;
     display: block;
+    color: #fbc531;
     letter-spacing: .75rem;
     animation: moving-left 1.3s ease-in;
 }
@@ -111,7 +112,7 @@ header {
 
 .btn-white {
     background-color: #fff;
-    color: #777;
+    color: #222;
 }
 
 .btn::after {
@@ -149,7 +150,7 @@ header {
     }
     100% {
         opacity: 1;
-        transform: translateX(0);
+        transform: translateY(0);
     }
 }
 
@@ -245,7 +246,175 @@ header {
     background: #1e3c72;  
     background: linear-gradient(to bottom right, #030a35, #3438f5); 
     clip-path: polygon(0 100%, 100% 100%, 100% 15%, 50% 0, 0 15%);
+    display: flex;
+    align-items: justify;
+    position: relative;
 }
+
+#about-us #head-main-about {
+    position: absolute;
+    top: 5%;
+    left: 28%;
+    font-size: 8rem;
+    font-weight: 500;
+    margin: 6rem;
+    color: white;
+    font-family: cursive;
+    animation: moveInBottomUp 1s linear;
+    text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+             0px 8px 13px rgba(0,0,0,0.1),
+             0px 18px 23px rgba(0,0,0,0.1);
+}
+
+#about-us .buttons .btn-gautam {
+    position: absolute;
+    top: 50%;
+    left: 40%;
+}
+
+#about-us .buttons .btn-avninder {
+    position: absolute;
+    top: 60%;
+    left: 40%;
+}
+
+#about-us .buttons .btn-red {
+    background-color: #c0392b;
+    color: #f1c40f;
+    width: 30rem;
+    text-align: center;
+}
+
+.card-gautam .middle {
+	position: absolute;
+	left: 7.5%;
+	top: 35%;
+}
+.card-gautam .card {
+	cursor: pointer;
+	width: 34rem;
+    height: 45rem;
+    animation: moving-right 1s linear;
+}
+.card-gautam .card .front,.card-gautam .card .back {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	backface-visibility: hidden;
+	position: absolute;
+	transition: transform .6s linear;
+}
+.card-gautam .card .front img {
+	height: 100%;
+}
+.card-gautam .card .front {
+	transform: perspective(60rem) rotateY(0deg);
+}
+.card-gautam .card .back {
+	background: #f1f1f1;
+	transform: perspective(60rem) rotateY(180deg);
+}
+.card-gautam .card .back .back-content {
+	color: #2e3c50;
+	text-align: center;
+    width: 100%;
+    position: absolute;
+    font-size: 2rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.card-gautam .card .back .back-content .sm a {
+	display: inline-flex;
+	width: 4rem;
+	height: 4rem;
+	justify-content: center;
+	align-items: center;
+	color: #2e3c50;
+	font-size: 18px;
+	transform: 0.4s;
+    border-radius: 50%;
+    text-decoration: none;
+}
+.card-gautam .card .back .back-content .sm a:hover {
+	background: #2e3c50;
+	color: white;
+}
+.card-gautam .card:hover > .back {
+	transform: perspective(60rem) rotateY(0deg);
+}
+.card-gautam .card:hover > .front {
+	transform: perspective(60rem) rotateY(-180deg);
+}
+
+
+
+.card-avninder .middle {
+	position: absolute;
+	left: 70%;
+	top: 35%;
+}
+.card-avninder .card {
+	cursor: pointer;
+	width: 34rem;
+    height: 45rem;
+    animation: moving-left 1s linear;
+}
+.card-avninder .card .front, .card-avninder .card .back {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+    backface-visibility: hidden;
+    text-align: center;
+    position: absolute;
+	transition: transform .6s linear;
+}
+.card-avninder .card .front img {
+	height: 100%;
+}
+.card-avninder .card .front {
+	transform: perspective(60rem) rotateY(0deg);
+}
+.card-avninder .card .back {
+	background: #f1f1f1;
+	transform: perspective(60rem) rotateY(180deg);
+}
+.card-avninder .card .back .back-content {
+	color: #2e3c50;
+	text-align: center;
+    width: 100%;
+    font-size: 2rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.card-avninder .card .back .back-content .sm a {
+	display: inline-flex;
+	width: 4rem;
+	height: 4rem;
+	justify-content: center;
+	align-items: center;
+	color: #2e3c50;
+	font-size: 18px;
+	transform: 0.4s;
+    border-radius: 50%;
+    text-decoration: none;
+}
+.card-avninder .card .back .back-content .sm a:hover {
+	background: #2e3c50;
+	color: white;
+}
+.card-avninder .card:hover > .back {
+	transform: perspective(60rem) rotateY(0deg);
+}
+.card-avninder .card:hover > .front {
+	transform: perspective(60rem) rotateY(-180deg);
+}
+
+
+
+
 
 #footer {
     height: 50vh;
