--- a/my project/style.css
+++ b/my project/style.css
@@ -348,7 +348,6 @@ header {
 }
 
 
-
 .card-avninder .middle {
 	position: absolute;
 	left: 70%;
@@ -411,10 +410,12 @@ header {
 .card-avninder .card:hover > .front {
 	transform: perspective(60rem) rotateY(-180deg);
 }
+
 #footer {
     height: 50vh;
     background-image: linear-gradient(to bottom, rgb(0, 15, 102), rgb(56, 0, 105)) ;  
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+    position: relative;
 }
 .one{
     padding: 6rem 12rem;
@@ -425,7 +426,7 @@ header {
     width: 50%;
     position: relative;
 }
-.footer-head {
+#footer-head {
     font-size: 4.5rem;
     font-weight: 500;
     text-align: center;
@@ -441,7 +442,6 @@ header {
 .footer-body{
     display: flex;
     flex-direction: row;
-
 }
 .two h2 {
     font-size: 3rem;
@@ -467,6 +467,7 @@ header {
     margin-bottom: 1rem;
     border: none;
     color: black;
+    outline-style: none;
 }
 .text-input{
     width: 100%;
@@ -475,6 +476,7 @@ header {
     resize: none;
     padding: 0.9rem 1.2rem;
     font-weight: 600;
+    outline-style: none;
 }
 .two form button {
     position: absolute;
@@ -511,7 +513,7 @@ header {
 }
 .icon4:hover{
     transition: 0.5s;
-    color: rgb(233, 255, 40);
+    color:  #ff4d4d;
 }
 .icon5:hover{
     transition: 0.5s;
@@ -519,5 +521,22 @@ header {
 }
 .icon6:hover {
     transition: 0.5s;
-    color: rgb(5, 89, 199);
+    color: #535c68;
+}
+
+.end-footer-text {
+    position: absolute;
+    bottom: 5%;
+    left: 35%;
+}
+
+.end-footer-text p {
+    font-size: 2rem;
+    color: #fff;
+    font-weight: 400;
+}
+
+.end-footer-text p a {
+    color: Yellow;
+    text-decoration: none;
 }
