--- a/Portfolio Site/style.css
+++ b/Portfolio Site/style.css
@@ -636,6 +636,7 @@ header {
 }
 
 #about-us {
+  height: 55rem;
   margin-top: 2rem;
   background: #1e3c72;
   background: -webkit-gradient(linear, left top, right bottom, from(#030a35), to(#3438f5));
