added project section

--- a/Portfolio Site/style.css
+++ b/Portfolio Site/style.css
@@ -509,7 +509,7 @@ header {
 }
 
 #project-intro {
-  height: 100vh;
+  height: auto;
   margin-top: 2rem;
   background-image: -webkit-gradient(linear, left top, right bottom, from(rgba(20, 137, 204, 0.8)), to(rgba(43, 50, 178, 0.6))), url("/img/project-back-2.jpg");
   background-image: linear-gradient(to right bottom, rgba(20, 137, 204, 0.8), rgba(43, 50, 178, 0.6)), url("/img/project-back-2.jpg");
@@ -518,6 +518,90 @@ header {
   padding: 3rem;
   /* clip-path: polygon(0% 0%, 0% 100%, 100% 100%, 0 100%); */
   border: 2rem solid white;
+}
+
+ .pricing-table{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  width: min(1600px, 90%);
+  margin: auto;
+}
+
+.pricing-card{
+  flex: 1;
+  max-width: 360px;
+  background-color: #fff;
+  margin: 20px 10px;
+  text-align: center;
+  cursor: pointer;
+  overflow: hidden;
+  color: #2d2d2d;
+  transition: .3s linear;
+}
+
+.pricing-card-header{
+  background-color: #0fbcf9;
+  display: inline-block;
+  color: #fff;
+  padding: 12px 30px;
+  border-radius: 0 0 20px 20px;
+  font-size: 16px;
+  text-transform: uppercase;
+  font-weight: 600;
+  transition: .4s linear;
+}
+
+.pricing-card:hover .pricing-card-header{
+  box-shadow: 0 0 0 26em #0fbcf9;
+}
+
+.price{
+  font-size: 35px;
+  color: #0fbcf9;
+  margin: 40px 0;
+  transition: .2s linear;
+  text-transform: uppercase;
+}
+
+.price sup, .price span{
+  font-size: 22px;
+  font-weight: 700;
+}
+
+.pricing-card:hover ,.pricing-card:hover .price{
+  color: #fff;
+}
+
+.pricing-card li{
+  font-size: 16px;
+  padding: 10px 0;
+  text-transform: uppercase;
+}
+
+.order-btn{
+  display: inline-block;
+  margin-bottom: 40px;
+  margin-top: 80px;
+  border: 2px solid #0fbcf9;
+  color: #0fbcf9;
+  padding: 18px 40px;
+  border-radius: 8px;
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 500;
+  transition: .3s linear;
+}
+
+.order-btn:hover{
+  background-color: #0fbcf9;
+  color: #fff;
+}
+
+@media screen and (max-width:1100px){
+  .pricing-card{
+    flex: 50%;
+  }
 }
 
 #footer {
