--- a/Portfolio Site/style.css
+++ b/Portfolio Site/style.css
@@ -1013,7 +1013,7 @@ header {
           transform: perspective(60rem) rotateY(-180deg);
 }
 
-@media screen and (max-width: 768px) {
+@media only screen and (max-width: 768px) {
   html, body {
     font-size: 6px;
   }
