update section finally awesome :)

--- a/Portfolio Site/style.css
+++ b/Portfolio Site/style.css
@@ -664,7 +664,7 @@ header {
 .about-card .about-image {
   width: 100%;
   margin-bottom: 15px;
-  height: 370px;
+  height: 450px;
   border: 1px solid #ecf0f1;
 }
 .about-card:hover ,.about-card:hover .price{
@@ -691,6 +691,7 @@ header {
   color: #f1c40f;
   padding: 18px 40px;
   border-radius: 8px;
+  font-size: 16px;
   text-transform: uppercase;
   font-weight: 500;
   transition: .3s linear;
@@ -713,7 +714,7 @@ ul li.about-icon-holder {
   text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1), 0px 18px 23px rgba(0, 0, 0, 0.1);
 }
  
-.icon1, .icon2, .icon3, .icon4, .icon5, .icon6 {
+.about-icon-holder .icon1,.about-icon-holder .icon2,.about-icon-holder .icon3,.about-icon-holder .icon4,.about-icon-holder .icon5,.about-icon-holder .icon6 {
   margin: 3px 2px;
   -webkit-transition: 0.5s;
   transition: 0.5s;
@@ -756,7 +757,6 @@ ul li.about-icon-holder {
   color: #535c68;
 }
 
- 
 
 /* footer */
 #footer {
