--- a/Portfolio Site/style.css
+++ b/Portfolio Site/style.css
@@ -733,13 +733,13 @@ header {
 }
 
 li.about-icon-holder {
-  font-size: 32px;
+  font-size: 42px;
   margin-top: 10px;
   text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1), 0px 18px 23px rgba(0, 0, 0, 0.1);
 }
 
 .icon1, .icon2, .icon3, .icon4, .icon5, .icon6 {
-  margin: 0.3rem 0.5rem;
+  margin: 3px 7px;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   color: #ffffffaa;
